# ftx-derivatives

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/structs/: contract.rs  mod.rs  positions.rs  trade.rs  transaction.rs
