[package]
name = "ftx-derivatives"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
rust_decimal = { version = "1.20", features = ["serde-float"] }

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros"] }
